--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -18,7 +18,7 @@
   display: none;
   height: 50px;
   width: 50px;
-  background-color: rosybrown;
+  /* background-color: rosybrown; */
 }
 
 #bufferTool {
